styles.css
/* ... */
/*
-small devices (portrait tablets and large phones, 600px to 768px)
*/
@media only screen and (min-width: 600px) and (max-width: 767.9px) {
    
    html, body {
        display: flex;
        flex-direction: column;
        align-items: center;
        min-width: auto;
        margin: 0;
        font-family: var(--font-family);
        color: var(--text-primary-color);
        background: var(--background-color);
        
    }

    body::-webkit-scrollbar {
        display: none;
    }
    
    #container {
        flex-direction: column;
        align-items: flex-start;
        padding-left: 3rem;
        padding-right: 3rem;
        padding-top: 3rem;
        min-width: auto;
    }

    #hero {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        position: relative;
        width: auto;
        top: 0;
    }

    #main {
        display: inline-block;
        flex-direction: column;
        position: sticky;
        width: auto;
        margin-left: none;
        
        
    }

    nav {
        visibility: hidden;
     }    
}

/*
-medium devices (landscape tablets, 768px to 992px)
*/
@media only screen and (min-width: 768px) and (max-width: 991.99px) {
    html, body {
        display: flex;
        flex-direction: column;
        align-items: center;
        min-width: auto;
        margin: 0;
        font-family: var(--font-family);
        color: var(--text-primary-color);
        background: var(--background-color);
    
    }

    body::-webkit-scrollbar {
        display: none;
    }
    
    #container {
        flex-direction: column;
        align-items: flex-start;
        padding-left: 3rem;
        padding-right: 3rem;
        padding-top: 3rem;
        min-width: auto;
    }

    #hero {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        position: relative;
        width: auto;
        top: 0;
    }

    #main {
        display: inline-block;
        flex-direction: column;
        position: sticky;
        width: auto;
        margin-left: none;
    
        
    }
    
    nav {
        visibility: hidden;
    }  
}

/*
-large devices (laptops/desktops, 992px to 1200px)
-add mouse position light
*/
@media only screen and (min-width: 992px) and (max-width: 1199.9px) {
    
    html, body {
        display: flex;
        flex-direction: column;
        align-items: center;
        width: auto;
        margin: 0;
        font-family: var(--font-family);
        color: var(--text-primary-color);
        background: var(--background-color);
        
    }

    body::-webkit-scrollbar {
        display: none;
    }
    
    #container {
        flex-direction: row;
        justify-content: flex-start;
        padding-left: 3rem;
        padding-right: 3rem;
        padding-top: 3rem;
        
    }

    #hero {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        position: fixed;
        width: 40%;
        height: 100vh;
        top: 0;
    }

    #main {
        display: inline-block;
        flex-direction: column;
        position: sticky;
        width: calc(60% - 5rem);
        margin-left: calc(40% + 4.5rem);
        overflow: auto;
        
    }

    nav {
        visibility: visible;
     }

     .hidden {
        opacity: 0;
        filter: blur(5px);
        transform: translateX(100%);
        transition: all 1s;
    }
    
    .show {
        opacity: 1;
        filter: blur(0);
        transform: translateX(0%);
    }

    /******************************************************************************
                            HERO SECTION
    ******************************************************************************/

    #hero-title {
        font-size: var(--fs-xl);
        color: var(--text-secondary-color);
    }

    #hero-intro {
        color: var(--text-third-color);
    }

    #hero-job {
        color: var(--text-secondary-color);
    }

    #hero-button-container {
        display: inline-block;
        padding-right: 1em;
        margin-bottom: 5em;
    }

    #nav-menu {
        list-style-type: none;
    }


    .nav-menu-link {
        display: flex;
        flex-direction: row;
        align-items: center;
        margin: 0.25em;
        color: var(--nav-menu-indicator-color);
        text-decoration: none;
    }

    .nav-indicator {
        display: inline-block;
        background-color: var(--border-color);
        width: 2em;
        height: 1px;
        margin-right: 1em;
    }


    .nav-menu-item:hover a.nav-menu-link  {
        color: var(--text-secondary-color);
    }

    .nav-menu-item:hover .nav-indicator {
        background-color: var(--text-secondary-color);
    }

}
/* ... */

